adjusted pic alignment and corrected bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,22 @@ body{
 }
 
 
+
+
+
+#logo{
+        margin-left: auto;
+        margin-right: auto;
+        align-content: center;
+        display: block;
+
+
+}
+
 .btn-primary,.reset{
 	background-color: #313477;
 	color: yellow;
-	font-family: 'Sigmar One', sans-serif;
+	font-family: sans-serif;
 	font-size: 30px;
 	padding: 20px;
 	margin-top: 100px;
@@ -25,7 +37,7 @@ body{
 }
 
 h2, #message, #finalMessage{
-	font-family: Sigmar One;
+	font-family: sans-serif;
 }
 
 .thisChoice:hover{
